refactor resources(registration, requisition and verification)
